2012-09-17 Jeff Rogers <dvrsn@diphi.com>
	* include/nsthread.h:
	* include/ns.h: update definition of NS_EXPORT to use modern GCC
	visibility attributes

2012-05-11 Jeff Rogers <dvrsn@diphi.com>
	* nsd/init.tcl: fix previous version that had renaming logic twice

2011-12-13 Jeff Rogers <dvrsn@diphi.com>
	* nsd/init.tcl: add logic to handle commands imported from a namespace
	and then renamed (some tcllib packages do this)

2011-10-25 tag aolserver_v45_r2

2011-10-25 Jeff Rogers <dvrsn@diphi.com>
	* nsd/nsd.h: set patchlevel to 4.5.2

2011-10-13 Jeff Rogers <dvrsn@diphi.com>
	* nsd/nsd.h:
	* nsd/driver.c: add tuning tweak and config variable to let 
	driver accept more than one connection per spin.  
	SF RFE #1014273

2011-10-11 Jeff Rogers <dvrsn@diphi.com>
	* nsd/op.c: handle internal error from redirect recursion overflow
	directly instead of redirecting to internal error page.  Prevents
	error displaying error page from crashing server.

2011-10-11 Jeff Rogers <dvrsn@diphi.com>
	* doc/Ns_Filter.3:
	* doc/ns_filter.n:
	* nsd/conn.c:
	* nsd/connio.c:
	* nsd/driver.c:
	* nsd/filter.c:
	* nsd/nsd.h:
	* nsd/op.c:
	* nsd/queue.c:
	* nsd/server.c:
	* nsd/tclrequest.c:
	* include/ns.h: add various functions, mostly from SF RFEs - 
	pre-write filter, response content modification, 
	insert/append filter, priority filters, ns_conn gzip flag,
	re-run filters on redirect with new config option "filterredirect",
	add new constants, fix STREQ macro

2011-10-07 Jeff Rogers <dvrsn@diphi.com>
	* nsd/nsd.h:
	* nsd/fastpath.c:
	* nsd/server.c: apply patch from John Caruso to avoid fastpath 
	caching a file that has been modified too recently and possibly
	colliding inodes.  Added new fastpath config option "cacheminage"
	to control timing.

2011-09-27 Jeff Rogers <dvrsn@diphi.com>
	* nsd/nsd.h:
	* nsd/tclmisc.c: add NsTclGetNative function to retrieve decoded
	strings (rather than utf-8) from Tcl_Objs 
	* nsd/tclreturn.c: decode strings for passing to ns_returnfile 